--- a/pom.xml
+++ b/pom.xml
@@ -367,7 +367,7 @@
                     <!-- <argLine>-XX:-UseSplitVerifier ${jacoco.utAgentConfig}</argLine> -->
                     <!-- JDK 8 - bytecode verifier cannot be relaxed or disabled -->
                     <!-- to prevent runtime errors, OpenJPA tests are ignored -->
-                    <argLine>${jacoco.utAgentConfig}</argLine>
+                    <!-- <argLine>${jacoco.utAgentConfig}</argLine> -->
                     <includes>
                         <include>**/*Tests.java</include>
                     </includes>
