Adding project content

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,3 +20,6 @@ sonar.java.binaries=target/classes
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
+
+#Comma-separated paths to directories with tests
+sonar.tests=src/test/java
